# forge

./: .gitignore  .markdownlint.json  .markdownlintignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  FP&A_TEST_COVERAGE_AUDIT.md  Makefile  README.md  references.yaml  rustfmt.toml
.asimov/: project.yaml  roadmap.yaml  warmup.json
.cargo/: audit.toml  config.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG_ARCHIVE.md  COMPETITIVE_ANALYSIS.md  EXAMPLES.md  EXCEL_EXPORT_DESIGN.md  EXCEL_IMPORT_DESIGN.md  FEATURES.md  FOR_KANTIA.md  FPA-PREDICTION-METHODS.md  FUNCTIONS.md  HOSTING_ARCHITECTURE.md  INSTALLATION.md  MARKET_ANALYSIS.md  MCP.md  VERSION_HISTORY.md
docs/architecture/: 00-OVERVIEW.md  01-COMPONENT-ARCHITECTURE.md  02-DATA-MODEL.md  05-EXCEL-INTEGRATION.md  08-API-SERVER-ARCHITECTURE.md  ADR-003-EDITOR-EXTENSIONS.md  ADR-004-100-PERCENT-TEST-COVERAGE.md  ADR-004-XLFORMULA-EQUIVALENCE.md  ADR-005-NO-LSP.md  ADR-006-COVERAGE-EXCLUSIONS.md  ADR-007-E2E-GNUMERIC-VALIDATION.md  ADR-008-FPA-NATIVE-FUNCTIONS.md  ADR-009-YAML-FOR-AI-EFFICIENCY.md  ADR-010-GIT-NATIVE-FINANCIAL-MODELING.md  ADR-011-SOURCE-CODE-CLOSURE.md  ADR-011-XLFORMULA-EQUIVALENCE.md  ADR-012-FEATURE-FLAGS.md  ADR-013-FUNCTION-REGISTRY.md  ADR-014-schema-versioning.md  ADR-015-FUNCTION-SCALAR-CLASSIFICATION.md  ADR-016-monte-carlo-architecture.md  ADR-017-MONTE-CARLO-SEQUENTIAL.md  ADR-018-SCENARIO-ANALYSIS.md  ADR-019-DECISION-TREES.md  ADR-020-REAL-OPTIONS.md  ADR-021-TORNADO-DIAGRAMS.md  ADR-022-BOOTSTRAP-RESAMPLING.md  ADR-023-BAYESIAN-NETWORKS.md  ADR-024-SELF-UPDATE-REMOVAL.md  ADR-024-SELF-UPDATE.md  ADR-025-FEATURE-GATE-INVERSION.md  ADR-026-FPGA-HFT-ACCELERATION.md  ADR-027-E2E-TEST-MIGRATION.md  ADR-028-CRYSTAL-ANALYSIS.md  ADR-030-GTM-LICENSING-STRATEGY.md  ADR-031-LICENSE-ELASTIC-2.0.md  ADR-032-CLI-SCHEMA-EXAMPLES.md  ADR-033-EXCEL-EXPORT.md  ADR-034-EXCEL-IMPORT.md  ADR-035-RICH-METADATA.md  (+15 more)
docs/cli/: README.md
editors/vscode/: LICENSE  README.md  package.json
editors/zed/: README.md  extension.toml
editors/zed/languages/forge/: highlights.scm
editors/zed/src/: lib.rs
examples/: bayesian.yaml  bootstrap.yaml  breakeven.yaml  check_columns.rs  check_export.rs  debug_parse.rs  decision-tree.yaml  monte-carlo.yaml  real-options.yaml  scenarios.yaml  test_formulas.rs  tornado.yaml  variance.yaml
schema/: README.md  forge-v1.0.0.schema.json  forge-v1.0.schema.json.deprecated  forge-v5.0.0.schema.json
scripts/: rewrite-license-history.sh
src/: error.rs  lib.rs  main.rs  types.rs  update.rs
src/api/: handlers.rs  mod.rs  server.rs
src/bayesian/: config.rs  engine.rs  inference.rs  mod.rs  tests.rs
src/bootstrap/: config.rs  engine.rs  mod.rs  tests.rs
src/cli/: commands.rs  mod.rs
src/cli/commands/: analysis.rs  audit.rs  examples.rs  excel_io.rs  functions.rs  mod.rs  prediction.rs  results.rs  schema.rs  simulate.rs  update.rs  upgrade.rs
src/cli/commands/tests/: audit.rs  break_even.rs  calculate.rs  common.rs  compare.rs  export.rs  functions.rs  goal_seek.rs  import.rs  integration.rs  mod.rs  parsing.rs  scenario.rs  schema.rs  sensitivity.rs  upgrade.rs  utils.rs  validate.rs  variance.rs  watch.rs
src/core/: unit_validator.rs
src/core/array_calculator/: dates.rs  mod.rs  parser.rs  tokenizer.rs
src/core/array_calculator/evaluator/: advanced.rs  aggregation.rs  array.rs  (+12 more)
src/decision_trees/: config.rs  engine.rs  mod.rs  tests.rs
src/excel/: exporter.rs  formula_translator.rs  importer.rs  reverse_formula_translator.rs
src/functions/: definitions.rs  mod.rs  registry.rs  registry_tests.rs
src/mcp/: mod.rs  server.rs  types.rs
src/monte_carlo/: config.rs  correlation.rs  distributions.rs  engine.rs  excel_export.rs  mod.rs  sampler.rs  sensitivity.rs  statistics.rs  tests.rs
src/parser/: arrays.rs  includes.rs  mod.rs  model.rs  multi_doc.rs  schema.rs  tests.rs  variables.rs
src/real_options/: binomial.rs  black_scholes.rs  config.rs  engine.rs  mod.rs  tests.rs
src/scenarios/: config.rs  engine.rs  mod.rs  tests.rs
src/tornado/: config.rs  engine.rs  mod.rs  tests.rs
src/writer/: mod.rs
test-data/: budget.yaml  export_basic.yaml  export_cross_table.yaml  export_with_formulas.yaml  if_compare_test.yaml  if_mult3_test.yaml  if_scalar_test.yaml  roundtrip_test.yaml  test.yaml  test_all_functions.yaml  test_financial.yaml  test_if_function.yaml  test_multi_document.yaml  test_platform.yaml  test_stale.yaml  test_underscore.yaml  test_valid_updated.yaml  v4_with_includes.yaml
test-data/advanced/: v4_data_sources.yaml  v4_enterprise_model.yaml  v4_unique_functions.yaml
test-data/examples/: budget_vs_actual.yaml  conditional_aggregations.yaml  date_functions.yaml  quarterly_pl.yaml  saas_unit_economics.yaml
test-data/v1.0/: math_functions.yaml  text_functions.yaml
tests/: MIGRATION_INVENTORY.md  README.md  api_tests.rs  array_calculator_tests.rs  array_calculator_tests_aggregation.rs  array_calculator_tests_dates.rs  array_calculator_tests_financial.rs  array_calculator_tests_forge.rs  array_calculator_tests_logical.rs  array_calculator_tests_lookup.rs  array_calculator_tests_math.rs  array_calculator_tests_statistical.rs  array_calculator_tests_text.rs  cli_integration_tests.rs  cli_tests.rs  e2e_advanced_complete.yaml  e2e_aggregation.yaml  e2e_aggregation_complete.yaml  e2e_array_complete.yaml  e2e_conditional.yaml  e2e_conditional_complete.yaml  e2e_date_complete.yaml  e2e_dates.yaml  e2e_financial.yaml  e2e_financial_complete.yaml  e2e_forge_complete.yaml  e2e_gnumeric_tests.rs  e2e_info.yaml  e2e_info_complete.yaml  e2e_libreoffice_tests.rs  e2e_logical.yaml  e2e_logical_complete.yaml  e2e_lookup.yaml  e2e_lookup_complete.yaml  e2e_math.yaml  e2e_math_complete.yaml  e2e_math_edge_cases.yaml  e2e_math_extended.yaml  e2e_roundtrip_complete.yaml  e2e_statistical.yaml  (+38 more)
tests/roundtrip/: aggregation.rs  conditional.rs  financial.rs  harness.rs  lookup.rs  math.rs  mod.rs  statistical.rs  text_date.rs
tests/scripts/: validate_mc.py
tests/validators/: setup.sh
(+87 files in other folders)
