[package]
name = "mollendorff-forge"
version = "10.0.0-alpha.9"
edition = "2021"
authors = ["Claude (Opus 4.5) - Principal Autonomous AI <noreply@anthropic.com>", "Möllendorff Group Inc. <admin@mollendorff.ai>"]
description = "Battle-tested financial math for AI. 173 Excel-compatible functions validated against Gnumeric & R. MCP integration, Monte Carlo, Decision Trees, Real Options."
repository = "https://github.com/mollendorff-ai/forge"
homepage = "https://mollendorff.ai/forge"
documentation = "https://github.com/mollendorff-ai/forge#readme"
license = "MIT OR Apache-2.0"
keywords = ["yaml", "formula", "excel", "asimov", "ai-built"]
categories = ["command-line-utilities", "parsing", "development-tools"]
readme = "README.md"
exclude = [
    "test-data/*",
    ".git*",
    ".asimov/*",
    ".cargo/*",
    ".cargo-husky/*",
    ".claude/*",
    ".vscode/*",
    ".markdownlint*",
    ".yamllint",
    "docs/*",
    "dist/*",
    "bin/*",
    "editors/*",
    "scripts/*",
    "releases/*",
    "Makefile",
    "*.md",
    "!README.md",
]
# Note: examples/ is included because src/cli/commands/examples.rs uses include_str!()

# Main binary (173 functions, all features)
# Build: cargo build --release
[[bin]]
name = "forge"
path = "src/main.rs"

# MCP server (AI integration)
[[bin]]
name = "forge-mcp"
path = "src/bin/forge_mcp.rs"

# API server (REST API)
[[bin]]
name = "forge-server"
path = "src/bin/forge_server.rs"

[dependencies]
# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"  # JSON handling for schema validation

# Expression evaluation (Excel-compatible formulas)
xlformula_engine = "0.1.18"

# JSON Schema validation (v1.0.0 array model)
jsonschema = "0.42"

# CLI
clap = { version = "4.5.53", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Dependency graph (for formula ordering)
petgraph = "0.8"

# Regex for array indexing preprocessing
regex = "1.12"

# Pretty output
colored = "3.0"

# Excel export (v1.0.0 array model)
rust_xlsxwriter = "0.93"

# Excel import (v1.0.0 array model)
calamine = "0.33"

# File watching (v1.4.0 watch mode)
notify = "8.2"
notify-debouncer-mini = "0.7"

# Async runtime (API server, MCP server)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "signal", "net"] }

# API Server
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"

# Monte Carlo simulation
rand_distr = "0.6"  # Distribution sampling (Normal, Triangular, PERT, etc.)
statrs = "0.18"     # Statistical functions (PDF, CDF, percentiles)

# E2E tests migrated to forge-e2e repository (see ADR-027)
# Gnumeric, R, Python validation now in https://github.com/mollendorff-ai/forge-e2e

[dev-dependencies]
# Testing
pretty_assertions = "1.4"
tempfile = "3.8"
assert_cmd = "2.0"  # CLI integration testing
predicates = "3.1"  # CLI output assertions
# Git hooks (auto-installs on cargo test)
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

# Allow coverage cfg for conditional compilation (ADR-006)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

# Pedantic linting - code is for humans to read (ADR-004)
# Note: Clippy config is in Makefile (lint target) for proper precedence
[lints.clippy]
# Specific lints we enforce (auto-fixable)
redundant_closure_for_method_calls = "warn"
manual_string_new = "warn"
inefficient_to_string = "warn"
implicit_clone = "warn"
uninlined_format_args = "warn"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
